# SimpleChatApp

./: .gitignore  LICENSE  README.md  setup.cfg
src/iaschat/: client_protocol.py  server_protocol.py  tcp_direct.py  udp_client.py  udp_groupchat_client.py  udp_groupchat_server.py  udp_server.py  utils.py
